--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -47,4 +47,14 @@
     opacity: 0.9;
   }
 
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
 
