--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -58,3 +58,12 @@ input[type="file"] {
   cursor: pointer;
 }
 
+.row1{
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(var(--bs-gutter-y) * -1);
+  margin-right: calc(var(--bs-gutter-x) * -.5);
+  margin-left: calc(var(--bs-gutter-x) * -.5);
+}
