--- a/frontend/hms/src/CSS/Header/Header.css
+++ b/frontend/hms/src/CSS/Header/Header.css
@@ -1,5 +1,5 @@
 .navbar.navbar-dark.navbar-expand-md.fixed-top.bg-dark {
-    background-color: #000000 !important;
+    background-color: #1a2639 !important;
     opacity: 0.8;
     position: relative;
 }
