--- a/frontend/hms/src/CSS/Room_Management/ViewRooms.css
+++ b/frontend/hms/src/CSS/Room_Management/ViewRooms.css
@@ -1,3 +1,22 @@
-.card{
+#view{
     margin-top: 70px;
+    border-radius: 4px;
+    margin-top: 70px;
+    border-radius: 21px;
+    margin-right: -57px;
+    padding-left: 25px;
+    padding-right: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+#danger{
+    margin-left: 24px;
+}
+#war{
+    margin-left: 10px;
+}
+
+#view:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
