--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -47,16 +47,16 @@
     opacity: 0.9;
   }
 
-input[type="file"] {
-  display: none;
-}
-.custom-file-upload {
-  margin-top: 10px;
-  border: 1px solid #ccc;
-  display: inline-block;
-  padding: 6px 12px;
-  cursor: pointer;
-}
+/*input[type="file"] {*/
+/*  display: none;*/
+/*}*/
+/*.custom-file-upload {*/
+/*  margin-top: 10px;*/
+/*  border: 1px solid #ccc;*/
+/*  display: inline-block;*/
+/*  padding: 6px 12px;*/
+/*  cursor: pointer;*/
+/*}*/
 
 .row1{
   --bs-gutter-x: 0;
@@ -66,4 +66,9 @@ input[type="file"] {
   margin-top: calc(var(--bs-gutter-y) * -1);
   margin-right: calc(var(--bs-gutter-x) * -.5);
   margin-left: calc(var(--bs-gutter-x) * -.5);
+}
+
+.addFood{
+  background: url("Images/addFood.png");
+  background-size: cover;
 }
