--- a/frontend/hms/src/CSS/Login/Login1.css
+++ b/frontend/hms/src/CSS/Login/Login1.css
@@ -25,9 +25,9 @@
     text-align: center;
 }
 
-.form-group {
-    text-align: center;
-}
+/*.form-group {*/
+/*    text-align: center;*/
+/*}*/
 
 #input {
     margin: 10px;
