--- a/frontend/hms/src/CSS/Employee/employee.css
+++ b/frontend/hms/src/CSS/Employee/employee.css
@@ -6,8 +6,30 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: #ffffff;
     background-clip: border-box;
     border: 5px solid rgba(0,0,0,.125);
-    border-radius: .25rem
+    border-radius: .25rem;
+    opacity: 0.98;
+}
+.body{
+    background: url("../../Images/gift.png");
+    background-size: auto;
+}
+label{
+    font-size: 17px;
+    font-weight: 500;
+
+}
+.card-employee-inner{
+    /*position: relative;*/
+    /*display: flex;*/
+    padding: 25px 15px;
+    flex-direction: column;
+    word-wrap: break-word;
+    background-color: #ffffff;
+    background-clip: border-box;
+    border: 5px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+
 }
