--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -95,3 +95,34 @@ input[type="file"] {
   background: var(--primary);
   margin-top: 20px;
 }
+
+.blog-card {
+
+  background: #dde3e3;
+  display: inline-block;
+  width: 400px;
+  text-align: center;
+  cursor: pointer;
+  padding: 8px;
+  /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
+  margin: 40px;
+}
+.foodLabels{
+  font-size: xx-large;
+  font-weight: bolder;
+}
+.foodPrices{
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+.searchBar i {
+  position: absolute;
+  right: 25rem;
+  padding: 10px 12px;
+  pointer-events: none;
+}
+.searchBar{
+ margin-right: 25rem;
+ margin-left: 25rem;
+}
