--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -74,22 +74,19 @@ input[type="file"] {
   background-size: cover;
 }
 
-.mylabel{
-  display: block;
-  width: 30px;
-  height: 30px;
-  border: 1px solid var(--primary);
-  border-radius: 50%;
-  margin: 10px auto;
-  line-height: 30px;
-  color: var(--primary);
-  font-weight: bold;
-  font-size: 24px;
+.mylabel1 {
+  color: #103eb5;
+  margin-left: 20px;
 }
-.mylabel:hover{
-  background: var(--primary);
-  color: white;
+.mylabel1:hover{
+  color: #42a7f3;
 }
+
+#image{
+  margin-top: 20px;
+  font-size: 30px;
+}
+
 /* progress bar styles */
 .progress-bar{
   height: 5px;
