--- a/frontend/hms/src/CSS/Admin/SideNav.css
+++ b/frontend/hms/src/CSS/Admin/SideNav.css
@@ -29,11 +29,11 @@ button {
 
 
 #sidebar {
-
-    height: 100%;
-    min-width: 250px;
-    max-width: 250px;
-    background: #4e1c03;
+    position: fixed;
+    min-width: 240px;
+    max-width: 240px;
+    background: #1a2639 !important;
+    opacity: 0.9;
     color: #fff;
     transition: all 0.3s;
 }
@@ -44,7 +44,8 @@ button {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #4e1c03;
+    background: #1a2639 !important;
+    opacity: 0.8;
 }
 
 #sidebar .sidebar-header strong {
@@ -64,7 +65,8 @@ button {
 }
 
 #sidebar ul li a:hover {
-    color: #4e1c03;
+    color: #1a2639 !important;
+    opacity: 0.8;
     background: #fff;
 }
 
