--- a/frontend/hms/src/CSS/Room_Management/ManageRoomsDashboard.css
+++ b/frontend/hms/src/CSS/Room_Management/ManageRoomsDashboard.css
@@ -22,8 +22,38 @@
     margin-right: 20px;
 }
 
-#fa{
-    margin-left: 349px;
-    width: 147px;
-    margin-top: 30px;
+.btngenarate{
+    margin-left: 917px;
+}
+.table1 {
+    --bs-table-bg: transparent;
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: #212529;
+    --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+    --bs-table-active-color: #212529;
+    --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-table-hover-color: #212529;
+    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #212529;
+    vertical-align: top;
+    border-color: #8f9296;
+
+
+    display: table;
+    /*border-collapse: unset;*/
+    box-sizing: border-box;
+    text-indent: initial;
+    border-spacing: 3px;
+    border-color: #8f9296;
+
+}
+th{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+td{
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
