--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -39,7 +39,7 @@
   .homeCard{
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-right: 25x;
+    padding-right: 25px;
     padding-left: 25px;
   }
 
@@ -95,17 +95,7 @@ input[type="file"] {
   margin-top: 20px;
 }
 
-.blog-card {
 
-  background: #dde3e3;
-  display: inline-block;
-  width: 400px;
-  text-align: center;
-  cursor: pointer;
-  padding: 8px;
-  /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
-  margin: 40px;
-}
 .foodLabels{
   font-size: xx-large;
   font-weight: bolder;
@@ -143,5 +133,37 @@ input[type="file"] {
   margin-bottom: 1rem;
   color: #212529;
   vertical-align: top;
-}
 
+
+}
+.cartRow {
+
+  background: #dde3e3;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+  padding: 8px;
+  /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
+  margin: 40px;
+}
+.viewFoodCard {
+  background: #dde3e3;
+  display: inline-block;
+  width: 400px;
+  text-align: center;
+  cursor: pointer;
+  padding: 8px;
+  /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
+  margin: 40px;
+}
+.blog-card {
+  background: #dde3e3;
+  display: inline-block;
+  width: 400px;
+  text-align: center;
+  cursor: pointer;
+  padding: 8px;
+  /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
+  margin: 40px;
+}
