--- a/frontend/hms/src/CSS/RoomBookingManagement/ViewAllRooms.css
+++ b/frontend/hms/src/CSS/RoomBookingManagement/ViewAllRooms.css
@@ -1,9 +1,13 @@
 .blog-card{
-    width: 248px;
-    height: 208px;
+    width: 305px;
+    height: 226px;
+    padding-top: 22px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
 .blog-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+#all{
+
 }
