--- a/frontend/hms/src/App.css
+++ b/frontend/hms/src/App.css
@@ -129,24 +129,17 @@ input[type="file"] {
   --bs-table-active-bg: rgba(0, 0, 0, 0.1);
   --bs-table-hover-color: #212529;
   --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
-  width: 100%;
+  background: #dde3e3;
+  width: 95%;
   margin-bottom: 1rem;
   color: #212529;
+  margin-left: 35px;
+  opacity: 85%;
+  font-size: large;
   vertical-align: top;
 
-
 }
-.cartRow {
 
-  background: #dde3e3;
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  cursor: pointer;
-  padding: 8px;
-  /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
-  margin: 40px;
-}
 .viewFoodCard {
   background: #dde3e3;
   display: inline-block;
@@ -166,4 +159,14 @@ input[type="file"] {
   padding: 8px;
   /*box-shadow: 2px 0px 13px 7px rgba(25, 12, 255, 0.2);*/
   margin: 40px;
+}
+.cartQuantity:focus{
+  outline: none;
+}
+.cartQuantity{
+  outline: none;
+}
+
+.cartbody{
+  padding: 2px;
 }
