--- a/frontend/hms/src/CSS/RoomBookingManagement/BookRooms.css
+++ b/frontend/hms/src/CSS/RoomBookingManagement/BookRooms.css
@@ -6,6 +6,7 @@
     margin-right: -57px;
     padding-left: 25px;
     padding-right: 25px;
+    Width:500px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
@@ -14,7 +15,7 @@
     text-align: left;
 }
 #addrooms{
-    margin-left: 100px;
+    margin-left: 134px;
     width: 96px;
 }
 
